Destroy and Partials

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,4 +7,4 @@
 </p>
 
 <%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to article listing", article_path %>
+<%= link_to "Back to article listing", articles_path %>
