--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>hello underworld</h1>
 
-<%= link_to 'About', about_path %>
+<%= link_to 'Alpha blog', articles_path %> | <%= link_to 'About', about_path %>
