--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>hello underworld</h1>
-
-<%= link_to 'Alpha blog', articles_path %> | <%= link_to 'About', about_path %>
+<div class="center jumbotron">
+    <h1>ALPHA BLOG</h1>
+    <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg"%>
+</div>
