--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="center jumbotron">
-    <h1>ALPHA BLOG</h1>
-    <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg"%>
+    <div class="content-img">
+        <h1>ALPHA BLOG</h1>
+        <%= link_to 'Sign up now', "#", type:"button", class:"btn btn-success btn-lg btn-xlarge"%>
+    </div>
 </div>
