--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,39 @@
-<h1>Create an article</h1> 
-
 <% if @article.errors.any? %>
 <h2>Th following errors prevented the article from getting created</h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg| %>
-   <li><%= msg %></li>
-  <% end %>
-</ul>
+    <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+    </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %><br>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-<% end %>
-
-<%= link_to "Back to article listing", articles_path %>
+<div class="row">
+    <div class="col-md-12">    
+        <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+            <div class="form-group">
+                <div class="contrpl-label col-sm-2">
+                    <%= f.label :title %>
+                </div>
+                <div class="col-sm-8">
+                    <%= f.text_field :title, class: "form-control", placeholder: "Title of artcle", autofocus: true %>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="contrpl-label col-sm-2">
+                    <%= f.label :description %>
+                </div>
+                <div class="col-sm-8">
+                    <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-md-10">
+                    <%= f.submit class: 'btn btn-primary btn-lg' %>
+                </div>
+            </div>
+        <% end %>
+        <div class="col-xs-4 col-xs-offset-4">
+            [ <%= link_to "Cancel request and return to article listing", articles_path %> ]
+        </div>
+    </div>
+</div>
