--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,6 +43,13 @@ $navbar-default-bg: black;
     font-size: 1.7rem;
     background-color: #71DE79;
 }
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+.description {
+    margin-top: 0;
+}
 .footer {
     margin-top: 45px;
     padding-top: 5px;
