--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h2 align="center">Title: <%= @article.title %></h2>
     <div class="well col-xs-8 col-xs-offset-2">
-        <h4 class="center"><strong>Description:</strong></h4>
+        <h4 class="center description"><strong>Description:</strong></h4>
         <hr>
     <%= simple_format(@article.description) %>
     <div class="article-actions">
