--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,6 +43,10 @@ $navbar-default-bg: black;
     font-size: 1.7rem;
     background-color: #71DE79;
 }
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
 .article-actions {
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
