--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<h1 align="center">Signup for Alpha Blog</h1>
+
 <%= render 'shared/errors', obj: @user %>
 
 <div class="row">
@@ -29,7 +31,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-md-10">
-                    <%= f.submit class: 'btn btn-primary btn-lg' %>
+                    <%= f.submit "Sign up", class: 'btn btn-primary btn-lg' %>
                 </div>
             </div>
         <% end %>
